; ModuleID = '/home/carl/AnghaBench/systemd/src/journal/extr_journalctl.c_format_timestamp_maybe_utc.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal/extr_journalctl.c_format_timestamp_maybe_utc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_utc = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64, i32)* @format_timestamp_maybe_utc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @format_timestamp_maybe_utc(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i64, i64* @arg_utc, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = load i8*, i8** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i8* @format_timestamp_utc(i8* %11, i64 %12, i32 %13)
  store i8* %14, i8** %4, align 8
  br label %20

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = call i8* @format_timestamp(i8* %16, i64 %17, i32 %18)
  store i8* %19, i8** %4, align 8
  br label %20

20:                                               ; preds = %15, %10
  %21 = load i8*, i8** %4, align 8
  ret i8* %21
}

declare dso_local i8* @format_timestamp_utc(i8*, i64, i32) #1

declare dso_local i8* @format_timestamp(i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
